--- a/app/assets/stylesheets/forem/twist/style.css.scss
+++ b/app/assets/stylesheets/forem/twist/style.css.scss
@@ -198,6 +198,7 @@ form {
         top: -10px;
         right: 0px;
         float: right;
+        margin-top: 10px;
         -webkit-border-radius: 5px;
         list-style-type: none;
         li{
